Revision history for Perl extension Catalyst::Plugin::Authentication

0.10011 *UNRELEASED*
      - Update t/live_app_session.t to skip unless you have a newer, more
        reliable version of TWMC (RT#43817)

0.10010
      - Change from NEXT to MRO::Compat
      - Chop a number off the versions to get back to the correct 0.10000
        version scheme.

0.100092_01
      - Add hook for failing user restore.
        - Add test for this.
      - Fix bug in Credential::Password with password_type: clear.
        - Add test for this.
      - Add mock object tests for Credential::Password with password_type: 
        clear.

0.100092
      - Release new version, no changes since dev release.     

0.10009_01
      - Fix POD escaping, from RT#38694 (Luke Ross)
      - Change authentication backwards compatibility handling to not rely on
        Class::Data::Inheritable side effects, and so be Catalyst 5.80 safe 
        (t0m)

0.10009 2008-11-27
        - Including progressive realm for multiple authentication attempts
          in a single request.

0.10008 2008-10-23
		- Updating config to allow for inclusion of realm ref's in the main
		  config hash rather than in a subref called 'realms'

0.10007 2008-08-17
	- Update tests prereqs to include Test::Exception (RT #36339)
        - Some documentation fixes (including RT #36062)
        - Compatibility fix where the use of new style config and old
          style Authentication::Store::Minimal would cause a crash 
          (Reported & fixed by Jos Boumans C<kane@cpan.org>)
        - Documentation update on Password - to indicate proper field naming
        - Decouple Authentication system from session.  The realm class
          now allows complete control over how a user is persisted across
          requests.
        - pod fixes (RT #36062, RT #36063)

0.10006 2008-02-15
        - Additional documentation for Realms
        - Added update_user_in_session routine to allow re-saving of user data